--- a/my-project/index.html
+++ b/my-project/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1 class="text-yellow-400">Hello world!</h1>
+    <h1 class="bg-blue-600 text-white">Hello world!</h1>
 
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
