--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
+
+  <body
+    class="bg-no-repeat bg-fixed"
+    style="
+      background-image: url(https://pixfeeds.com/images/topic/3775/1200-3775-eiffel-tower-photo3.jpg);
+    "
+  >
     <h1 class="bg-blue-600 text-white">Hello world!</h1>
 
     <div id="app"></div>
