--- a/my-project/index.html
+++ b/my-project/index.html
@@ -16,6 +16,6 @@
     <h1 class="bg-blue-600 text-white">Hello world!</h1>
 
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
