--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,12 +8,12 @@
   </head>
 
   <body
-    class="bg-no-repeat bg-fixed bg-cover"
+    class="bg-no-repeat bg-fixed bg-cover font-size: 2rem line-height: 3rem"
     style="
       background-image: url(https://cdn.pixabay.com/photo/2016/11/18/19/01/paris-1836415_960_720.jpg);
     "
   >
-    <h1 class="bg-blue-600 text-white">Hello world!</h1>
+    <h1 class="bg-blue-600 text-white">Welcome to France</h1>
 
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
