--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,13 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
+  <nav class="fixed bg-yellow-300 text-slate-900">
+    <a href="#header">Home</a>
+    <a href="#regions">Regions</a>
+    <a href="#attractions">Attractions</a>
+    <a href="#foods">Foods</a>
+    <a href="#transportation">Transportation</a>
+  </nav>
   <body
     class="bg-no-repeat bg-fixed bg-cover"
     style="
       background-image: url(https://cdn.pixabay.com/photo/2016/11/18/19/01/paris-1836415_960_720.jpg);
     "
   >
-    <h1 class="bg-blue-600 text-white font-size: 2rem line-height: 3rem">
+    <h1
+      class="
+        bg-blue-600
+        text-white
+        font-size:
+        2rem
+        line-height:
+        3rem
+        text-center text-9xl
+        font-parisienne
+      "
+    >
       Welcome to France!
     </h1>
 
@@ -33,6 +51,6 @@
       href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <title>France</title>
   </body>
 </html>
