--- a/my-project/index.html
+++ b/my-project/index.html
@@ -9,7 +9,7 @@
   <body
     class="bg-no-repeat bg-fixed bg-cover"
     style="
-      background-image: url(https://cdn.pixabay.com/photo/2016/11/18/19/01/paris-1836415_960_720.jpg);
+      background-image: url(https://i.ytimg.com/vi/BZLZyX3JdEM/maxresdefault.jpg);
     "
   >
     <h1 class="bg-blue-600 text-white font-size: 2rem line-height: 3rem">
@@ -33,6 +33,6 @@
       href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <title class="text-white">France</title>
   </body>
 </html>
