--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
-  <nav class="fixed bg-yellow-300 text-slate-900">
+  <nav
+    class="fixed bg-yellow-300 text-slate-900 font-hubballi text-4xl space-x-72"
+  >
     <a href="#header">Home</a>
     <a href="#regions">Regions</a>
     <a href="#attractions">Attractions</a>
     <a href="#foods">Foods</a>
     <a href="#transportation">Transportation</a>
   </nav>
+  <span>#header</span>
   <body
     class="bg-no-repeat bg-fixed bg-cover"
     style="
@@ -20,7 +23,16 @@
     "
   >
     <h1
-      class="bg-blue-600 text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne"
+      class="
+        bg-blue-600
+        text-white
+        font-size:
+        2rem
+        line-height:
+        3rem
+        text-center text-9xl
+        font-parisienne
+      "
     >
       Welcome to France!
     </h1>
@@ -39,7 +51,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Hubballi&family=Parisienne&display=swap"
       rel="stylesheet"
     />
     <title class="text-white">France</title>
