--- a/my-project/index.html
+++ b/my-project/index.html
@@ -13,7 +13,7 @@
       text-slate-900
       font-hubballi
       text-4xl
-      justify-between
+      justify-around
       flex
       w-full
     "
