--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,16 +23,7 @@
     "
   >
     <h1
-      class="
-        bg-blue-600
-        text-white
-        font-size:
-        2rem
-        line-height:
-        3rem
-        text-center text-9xl
-        font-parisienne
-      "
+      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:-translate-y-3"
     >
       Welcome to France!
     </h1>
