--- a/my-project/index.html
+++ b/my-project/index.html
@@ -7,16 +7,7 @@
   </head>
 
   <nav
-    class="
-      fixed
-      bg-yellow-300
-      text-slate-900
-      font-hubballi
-      text-4xl
-      justify-around
-      flex
-      w-full
-    "
+    class="fixed bg-yellow-300 text-slate-900 font-hubballi text-4xl justify-around flex w-full"
   >
     <a href="#header">Home</a>
     <a href="#regions">Regions</a>
@@ -32,7 +23,7 @@
     "
   >
     <h1
-      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:-translate-y-3"
+      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:translate-y-3 hover:scale-110"
     >
       Welcome to France!
     </h1>
