--- a/my-project/index.html
+++ b/my-project/index.html
@@ -32,7 +32,16 @@
     "
   >
     <h1
-      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:-translate-y-3"
+      class="
+        text-white
+        font-size:
+        2rem
+        line-height:
+        3rem
+        text-center text-9xl
+        font-parisienne
+        hover:-translate-y-3
+      "
     >
       Welcome to France!
     </h1>
