--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,7 +23,7 @@
     "
   >
     <h1
-      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:translate-y-3 hover:scale-110"
+      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:translate-y-3 hover:scale-110 transition duration-150"
     >
       Welcome to France!
     </h1>
