--- a/my-project/index.html
+++ b/my-project/index.html
@@ -54,9 +54,10 @@
         3rem
         text-center text-9xl
         font-parisienne
-        hover:translate-y-3
+        hover:translate-y-10
         hover:scale-110
         transition-all
+        translate-y-10
       "
     >
       Welcome to France!
