--- a/my-project/index.html
+++ b/my-project/index.html
@@ -7,7 +7,16 @@
   </head>
 
   <nav
-    class="fixed bg-yellow-300 text-slate-900 font-hubballi text-4xl justify-around flex w-full"
+    class="
+      fixed
+      bg-yellow-300
+      text-slate-900
+      font-hubballi
+      text-4xl
+      justify-around
+      flex
+      w-full
+    "
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -37,7 +46,19 @@
     "
   >
     <h1
-      class="text-white font-size: 2rem line-height: 3rem text-center text-9xl font-parisienne hover:translate-y-3 hover:scale-110 transition duration-150"
+      class="
+        text-white
+        font-size:
+        2rem
+        line-height:
+        3rem
+        text-center text-9xl
+        font-parisienne
+        hover:translate-y-10
+        hover:scale-110
+        transition-all
+        translate-y-10
+      "
     >
       Welcome to France!
     </h1>
