--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,7 +23,17 @@
     rel="stylesheet"
   />
   <nav
-    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
+    class="
+      fixed
+      bg-yellow-500
+      text-slate-900
+      font-hubballi
+      text-4xl
+      justify-around
+      flex
+      w-full
+      z-10
+    "
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -48,7 +58,7 @@
       >Transportation</a
     >
   </nav>
-  <span>#header</span>
+  <span id="header"></span>
   <body>
     <header>
       <div
@@ -58,12 +68,24 @@
         "
       >
         <h1
-          class="text-white font-size: 2rem line-height:3rem text-center text-9xl font-parisienne hover:translate-y-10 hover:scale-110 transition-all translate-y-10"
+          class="
+            text-white
+            font-size:
+            2rem
+            line-height:3rem
+            text-center text-9xl
+            font-parisienne
+            hover:translate-y-10
+            hover:scale-110
+            transition-all
+            translate-y-10
+          "
         >
           Welcome to France!
         </h1>
       </div>
     </header>
+    <span id="regions"></span>
     <section>
       <h1>Regions</h1>
     </section>
