--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,17 +23,7 @@
     rel="stylesheet"
   />
   <nav
-    class="
-      fixed
-      bg-yellow-500
-      text-slate-900
-      font-hubballi
-      text-4xl
-      justify-around
-      flex
-      w-full
-      z-10
-    "
+    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -68,18 +58,7 @@
         "
       >
         <h1
-          class="
-            text-white
-            font-size:
-            2rem
-            line-height:3rem
-            text-center text-9xl
-            font-parisienne
-            hover:translate-y-10
-            hover:scale-110
-            transition-all
-            translate-y-10
-          "
+          class="text-white font-size: 2rem line-height:3rem text-center text-9xl font-parisienne hover:translate-y-10 hover:scale-110 transition-all translate-y-10"
         >
           Welcome to France!
         </h1>
@@ -89,5 +68,6 @@
     <section>
       <h1>Regions</h1>
     </section>
+    <section><span id="attractions">Attractions</span></section>
   </body>
 </html>
