--- a/my-project/index.html
+++ b/my-project/index.html
@@ -69,11 +69,7 @@
       >
         <h1
           class="
-            text-white
-            font-size:
-            2rem
-            line-height:3rem
-            text-center text-9xl
+            text-white text-center text-9xl
             font-parisienne
             hover:translate-y-10
             hover:scale-110
@@ -87,7 +83,10 @@
     </header>
     <span id="regions"></span>
     <section>
-      <h1>Regions</h1>
+      <h2 class="font-parisienne text-center text-5xl">Regions</h2>
+      <p>amongus</p>
+      <p>amongus</p>
+      <p>amongus</p>
     </section>
   </body>
 </html>
