--- a/my-project/index.html
+++ b/my-project/index.html
@@ -71,10 +71,10 @@
           class="
             text-white text-center text-9xl
             font-parisienne
-            hover:translate-y-10
+            hover:translate-y-20
             hover:scale-110
             transition-all
-            translate-y-10
+            translate-y-20
           "
         >
           Welcome to France!
@@ -84,10 +84,22 @@
     <span id="regions"></span>
     <section>
       <h2 class="font-parisienne text-center text-5xl">Regions</h2>
-      <p>amongus</p>
-      <p>amongus</p>
-      <p>amongus</p>
     </section>
-    <section><span id="attractions">Attractions</span></section>
+    <span id="attractions"></span>
+    <section>
+      <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
+    </section>
+    <span id="foods"></span>
+    <section>
+      <h2 class="font-parisienne text-center text-5xl">Foods</h2>
+    </section>
+    <span id="hotels"></span>
+    <section>
+      <h2 class="font-parisienne text-center text-5xl">Hotels</h2>
+    </section>
+    <span id="Transportation"></span>
+    <section>
+      <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
+    </section>
   </body>
 </html>
