--- a/my-project/index.html
+++ b/my-project/index.html
@@ -100,6 +100,11 @@
     <span id="Transportation"></span>
     <section>
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
+      <img
+        src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
+        class="object-right"
+      />
     </section>
+    <footer></footer>
   </body>
 </html>
