--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,7 +23,17 @@
     rel="stylesheet"
   />
   <nav
-    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
+    class="
+      fixed
+      bg-yellow-500
+      text-slate-900
+      font-hubballi
+      text-4xl
+      justify-around
+      flex
+      w-full
+      z-10
+    "
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -58,7 +68,14 @@
         "
       >
         <h1
-          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20"
+          class="
+            text-white text-center text-9xl
+            font-parisienne
+            hover:translate-y-20
+            hover:scale-110
+            transition-all
+            translate-y-20
+          "
         >
           Welcome to France!
         </h1>
@@ -95,10 +112,22 @@
     <span id="Transportation"></span>
     <section>
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
-      <img
-        src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
-        class="object-right"
-      />
+      <div>
+        <p class="text-center">
+          France has some of the oldest transportation systems. It one of the
+          densest networks in the world, with 146 kilometers of roads and 6.2
+          kilometers of rail lines per 100 kilometers squared. The center of it
+          is in one of the most busy cities, the city of Paris. Railroads,
+          roads, air, and water, all sorts of transportation are widely
+          developed in France.
+        </p>
+        <p>
+          amongus<img
+            src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
+            class="float-right max-w-5xl max-h-36"
+          />
+        </p>
+      </div>
     </section>
     <footer></footer>
   </body>
