--- a/my-project/index.html
+++ b/my-project/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Hubballi&family=Parisienne&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Hubballi&family=Parisienne&family=Satisfy&display=swap"
     rel="stylesheet"
   />
   <nav
@@ -113,7 +113,7 @@
     <section>
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
       <div>
-        <p class="text-center">
+        <p class="text-center text-2xl font-satisfy">
           France has some of the oldest transportation systems. It one of the
           densest networks in the world, with 146 kilometers of roads and 6.2
           kilometers of rail lines per 100 kilometers squared. The center of it
@@ -121,6 +121,7 @@
           roads, air, and water, all sorts of transportation are widely
           developed in France.
         </p>
+        <h3 class="font-parisienne text-3xl">1. Railroads</h3>
         <p>
           amongus<img
             src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
