--- a/my-project/index.html
+++ b/my-project/index.html
@@ -74,15 +74,15 @@
     </section>
     <span id="foods">
       <div class="flex justify-around bg-black w-96 h-96">
-        <h3 class="text-white justify-center font-parisienne text-3xl">
-          Soupe à l'oignon
-        </h3>
-        <div class="w">
+        <div class="justify-center">
           <img
             src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
             alt=""
           />
         </div>
+        <h3 class="text-white justify-center font-parisienne text-3xl">
+          Soupe à l'oignon
+        </h3>
       </div>
     </span>
     <section>
