--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,17 +23,7 @@
     rel="stylesheet"
   />
   <nav
-    class="
-      fixed
-      bg-yellow-500
-      text-slate-900
-      font-hubballi
-      text-4xl
-      justify-around
-      flex
-      w-full
-      z-10
-    "
+    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -68,14 +58,7 @@
         "
       >
         <h1
-          class="
-            text-white text-center text-9xl
-            font-parisienne
-            hover:translate-y-20
-            hover:scale-110
-            transition-all
-            translate-y-20
-          "
+          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20"
         >
           Welcome to France!
         </h1>
@@ -111,6 +94,7 @@
     </section>
     <span id="Transportation"></span>
     <section>
+      <p></p>
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
       <div>
         <p class="text-center">
