--- a/my-project/index.html
+++ b/my-project/index.html
@@ -19,11 +19,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&family=Hubballi&family=Parisienne&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Hubballi&family=Parisienne&display=swap"
     rel="stylesheet"
   />
   <nav
-    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
+    class="
+      fixed
+      bg-yellow-500
+      text-slate-900
+      font-hubballi
+      text-4xl
+      justify-around
+      flex
+      w-full
+      z-10
+    "
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -58,7 +68,14 @@
         "
       >
         <h1
-          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20"
+          class="
+            text-white text-center text-9xl
+            font-parisienne
+            hover:translate-y-20
+            hover:scale-110
+            transition-all
+            translate-y-20
+          "
         >
           Welcome to France!
         </h1>
@@ -74,15 +91,15 @@
     </section>
     <span id="foods">
       <div class="flex justify-around bg-black w-96 h-96">
-        <div class="justify-center">
+        <h3 class="text-white justify-center font-parisienne text-3xl">
+          Soupe à l'oignon
+        </h3>
+        <div class="w">
           <img
             src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
             alt=""
           />
         </div>
-        <h3 class="text-white justify-center font-parisienne text-3xl">
-          Soupe à l'oignon
-        </h3>
       </div>
     </span>
     <section>
@@ -94,23 +111,15 @@
     </section>
     <span id="Transportation"></span>
     <section>
-      <p></p>
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
-      <br />
       <div>
-        <p class="text-center text-2xl font-cormorant_garamond">
+        <p class="text-center">
           France has some of the oldest transportation systems. It one of the
           densest networks in the world, with 146 kilometers of roads and 6.2
-          kilometers of rail lines per 100 kilometers squared. The center of it
-          is in one of the most busy cities, the city of Paris. Railroads,
-          roads, air, and water, all sorts of transportation are widely
-          developed in France.
+          kilometers of rail lines per 100 kilometers
         </p>
-        <h3 class="font-parisienne text-3xl">1. Railroads</h3>
-        <br />
         <p>
-          Railroads
-          <img
+          amongus<img
             src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
             class="float-right max-w-5xl max-h-36"
           />
