--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,7 +23,17 @@
     rel="stylesheet"
   />
   <nav
-    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
+    class="
+      fixed
+      bg-yellow-500
+      text-slate-900
+      font-hubballi
+      text-4xl
+      justify-around
+      flex
+      w-full
+      z-10
+    "
   >
     <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
       >Home</a
@@ -58,7 +68,14 @@
         "
       >
         <h1
-          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20"
+          class="
+            text-white text-center text-9xl
+            font-parisienne
+            hover:translate-y-20
+            hover:scale-110
+            transition-all
+            translate-y-20
+          "
         >
           Welcome to France!
         </h1>
@@ -74,16 +91,15 @@
     </section>
     <span id="foods">
       <div class="flex justify-around bg-black w-96 h-96">
-        <div class="justify-center">
+        <h3 class="text-white justify-center font-parisienne text-3xl">
+          Soupe à l'oignon
+        </h3>
+        <div class="w">
           <img
             src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
             alt=""
           />
         </div>
-        <br />
-        <h3 class="text-white justify-center font-parisienne text-3xl">
-          Soupe à l'oignon
-        </h3>
       </div>
     </span>
     <section>
@@ -95,11 +111,10 @@
     </section>
     <span id="Transportation"></span>
     <section>
-      <p></p>
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
-      <br />
       <div>
-        <p class="text-center text-2xl font-cormorant_garamond">
+        <br />
+        <p class="text-center font-cormorant_garamond text-2xl">
           France has some of the oldest transportation systems. It one of the
           densest networks in the world, with 146 kilometers of roads and 6.2
           kilometers of rail lines per 100 kilometers squared. The center of it
@@ -107,13 +122,32 @@
           roads, air, and water, all sorts of transportation are widely
           developed in France.
         </p>
-        <h3 class="font-parisienne text-3xl">1. Railroads</h3>
-        <br />
-        <p>
-          Railroads
+      </div>
+      <div>
+        <h4 class="font-parisienne text-4xl">1. Railroads</h4>
+        <img
+          src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
+          class="float-right max-w-7xl max-h-52 mr-3"
+        />
+        <p class="font-cormorant_garamond text-2xl inline-block align-top">
+          Railroads in France have been used for a long time. It all started
+          with the French engineer Pierre Michel Moisson-Desroches suggesting to
+          the Emperor Napoleon to build seven national railways from Paris in
+          order to travel short distances quickly. However, The first railway in
+          France would be opened in 1827, with permission of King Louis XVIII in
+          1823. It went from the city of Saint-Étienne to the commune of
+          Andrézieux-Bouthéon. The network has undergone a major modernization
+          since 1981 with the arrival of the TGV high-speed rail service which
+          has been consistently expanded in following years.
+        </p>
+      </div>
+      <br />
+      <div>
+        <h4 class="font-parisienne text-4xl">2. Roads</h4>
+        <p class="font-cormorant_garamond text-2xl">
           <img
-            src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
-            class="float-right max-w-5xl max-h-36"
+            src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
+            class="float-left max-w-5xl max-h-52"
           />
         </p>
       </div>
