--- a/my-project/index.html
+++ b/my-project/index.html
@@ -73,15 +73,16 @@
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
     </section>
     <span id="foods">
-      <div class="align-middle justify-self-auto flex-auto bg-black w-96 h-96">
-        <h3 class="text-white justify-center font-parisienne text-3xl">
-          Soupe à l'oignon
-        </h3>
-        <div class="justify-center w-80 margin">
+      <div
+        class="align-middle justify-self-auto flex-auto bg-black w-96 h-96 text-white justify-center font-parisienne text-3xl border-8 rounded-md border-yellow-500"
+      >
+        <h3 class="text-center">Soupe à l'oignon</h3>
+        <div class="">
           <img
             src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
             alt=""
           />
+          <p class="text-center">Soupe à l'oignon or French Onion Soup is</p>
         </div>
       </div>
     </span>
