--- a/my-project/index.html
+++ b/my-project/index.html
@@ -35,25 +35,25 @@
       z-10
     "
   >
-    <a class="hover:text-blue-700 hover:scale-110 transition-all" href="#header"
+    <a class="hover:text-blue-700 hover:scale-110 transition-all navigation-bar" href="#header"
       >Home</a
     >
-    <a class="hover:text-white hover:scale-110 transition-all" href="#regions"
+    <a class="hover:text-white hover:scale-110 transition-all navigation-bar" href="#regions"
       >Regions</a
     >
     <a
-      class="hover:text-red-700 hover:scale-110 transition-all"
+      class="hover:text-red-700 hover:scale-110 transition-all navigation-bar"
       href="#attractions"
       >Attractions</a
     >
-    <a class="hover:text-red-700 hover:scale-110 transition-all" href="#foods"
+    <a class="hover:text-red-700 hover:scale-110 transition-all navigation-bar" href="#foods"
       >Foods</a
     >
-    <a class="hover:text-white hover:scale-110 transition-all" href="#hotels"
+    <a class="hover:text-white hover:scale-110 transition-all navigation-bar" href="#hotels"
       >Hotels</a
     >
     <a
-      class="hover:text-blue-700 hover:scale-110 transition-all"
+      class="hover:text-blue-700 hover:scale-110 transition-all navigation-bar"
       href="#transportation"
       >Transportation</a
     >
@@ -75,6 +75,7 @@
             hover:scale-110
             transition-all
             translate-y-20
+            header-title
           "
         >
           Welcome to France!
