--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,17 +23,7 @@
     rel="stylesheet"
   />
   <nav
-    class="
-      fixed
-      bg-yellow-500
-      text-slate-900
-      font-hubballi
-      text-4xl
-      justify-around
-      flex
-      w-full
-      z-10
-    "
+    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
   >
     <a
       class="hover:text-blue-700 hover:scale-110 transition-all navigation-bar"
@@ -76,15 +66,7 @@
         "
       >
         <h1
-          class="
-            text-white text-center text-9xl
-            font-parisienne
-            hover:translate-y-20
-            hover:scale-110
-            transition-all
-            translate-y-20
-            header-title
-          "
+          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20 header-title"
         >
           Welcome to France!
         </h1>
@@ -98,36 +80,41 @@
     <section>
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
     </section>
-    <span id="foods">
-      <div
-        class="
-          align-middle
-          justify-self-auto
-          flex-auto
-          bg-black
-          w-96
-          h-96
-          text-white
-          justify-center
-          font-parisienne
-          text-3xl
-          border-8
-          rounded-md
-          border-yellow-500
-        "
-      >
-        <h3 class="text-center">Soupe à l'oignon</h3>
-        <div class="">
-          <img
-            src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
-            alt=""
-          />
-          <p class="text-center">Soupe à l'oignon or French Onion Soup is</p>
-        </div>
-      </div>
-    </span>
+
     <section>
       <h2 class="font-parisienne text-center text-5xl">Foods</h2>
+      <span id="foods">
+        <div class="flex justify-center w-5/12 h-96">
+          <div
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
+          >
+            <h3 class="text-center">Soupe à l'oignon</h3>
+            <div class="">
+              <img
+                src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
+                alt=""
+              />
+            </div>
+            <p class="text-center text-sm font-cormorant_garamond">
+              Soupe à l'oignon or French Onion Soup is
+            </p>
+          </div>
+          <div
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
+          >
+            <h3 class="text-center">Soupe à l'oignon</h3>
+            <div class="">
+              <img
+                src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
+                alt=""
+              />
+              <p class="text-center text-sm font-cormorant_garamond">
+                Soupe à l'oignon or French Onion Soup is
+              </p>
+            </div>
+          </div>
+        </div>
+      </span>
     </section>
     <span id="hotels"></span>
     <section>
