--- a/my-project/index.html
+++ b/my-project/index.html
@@ -91,76 +91,82 @@
       </div>
     </header>
     <span id="regions"></span>
-    <section class="section">
+    <section id="section">
+      <br />
+      <br />
       <h2 class="font-parisienne text-center text-5xl">Regions</h2>
     </section>
     <span id="attractions"></span>
     <section class="section">
+      <br />
+      <br />
+
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
     </section>
+    <span id="foods"></span>
+    <br /><br />
 
     <section>
       <h2 class="font-parisienne text-center text-5xl">Foods</h2>
-      <span id="foods">
-        <div class="flex justify-center w-5/12 h-96">
-          <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
-          >
-            <h3 class="text-center">Soupe à l'oignon</h3>
-            <div class="">
-              <img
-                src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
-                alt=""
-              />
-            </div>
+
+      <div class="flex justify-center w-5/12 h-96">
+        <div
+          class="
+            align-middle
+            bg-black
+            text-white
+            font-parisienne
+            text-3xl
+            border-8
+            rounded-md
+            border-yellow-500
+            duration-150
+            hover:translate-y-6 hover:translate-x-6
+          "
+        >
+          <h3 class="text-center">Soupe à l'oignon</h3>
+          <div class="">
+            <img
+              src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
+              alt=""
+            />
+          </div>
+          <p class="text-center text-sm font-cormorant_garamond">
+            Soupe à l'oignon or French Onion Soup is
+          </p>
+        </div>
+        <div
+          class="
+            align-middle
+            bg-black
+            text-white
+            font-parisienne
+            text-3xl
+            border-8
+            rounded-md
+            border-yellow-500
+            duration-150
+            hover:translate-y-6 hover:translate-x-6
+          "
+        >
+          <h3 class="text-center">Soupe à l'oignon</h3>
+          <div class="">
+            <img
+              src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
+              alt=""
+            />
             <p class="text-center text-sm font-cormorant_garamond">
               Soupe à l'oignon or French Onion Soup is
             </p>
           </div>
-          <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
-          >
-            <h3 class="text-center">Soupe à l'oignon</h3>
-            <div class="">
-              <img
-                src="https://az826390.vo.msecnd.net/cdn/media/home/inspiring_recipes/recipes/new_-_s/soupe-a-loignon-et-a-lerable-1160x650-bs52726-pub-67290-01.ashx?la=fr&mw=1160&w=1160&hash=7E2282DE7FB04552C12B4FCF2EFD23C41F5C0CE0"
-                alt=""
-              />
-              <p class="text-center text-sm font-cormorant_garamond">
-                Soupe à l'oignon or French Onion Soup is
-              </p>
-            </div>
-          </div>
         </div>
-      </span>
+      </div>
     </section>
     <span id="hotels"></span>
     <section class="section">
       <h2 class="font-parisienne text-center text-5xl">Hotels</h2>
     </section>
-    <span id="Transportation"></span>
+    <span id="transportation"></span>
     <section class="section">
       <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
       <div>
@@ -184,7 +190,7 @@
             text-2xl
             inline-block
             align-top
-            text-center text
+            text-center
             translate-y-10
           "
         >
@@ -213,12 +219,35 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl">2. Roads</h4>
-        <p class="font-cormorant_garamond text-2xl">
-          road
+        <h4 class="font-parisienne text-4xl">2. Autoroutes</h4>
+        <p
+          class="
+            font-cormorant_garamond
+            text-2xl
+            inline-block
+            align-top
+            text-center
+            translate-y-10
+            text-
+          "
+        >
+          The autoroute, also known as highway or motorway, is a network of
+          roads over 11,882 kilometers (7,383 miles). The road signs are
+          fundamentally different from what other countries have. They don't
+          have a numbering system, but instead have a clustering of Autoroute
+          numbers based on the region. Such examples include A1 being the the
+          "autoroute du Nord" and A4 being the "autoroute de l'Est".
           <img
             src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
-            class="float-left max-w-5xl max-h-52"
+            class="
+              float-left
+              max-w-7xl max-h-52
+              ml-3
+              rounded-md
+              hover:scale-110
+              transition-all
+              -translate-y-10
+            "
           />
         </p>
       </div>
