--- a/my-project/index.html
+++ b/my-project/index.html
@@ -132,7 +132,18 @@
           </div>
 
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
+            class="
+              align-middle
+              bg-black
+              text-white
+              font-parisienne
+              text-3xl
+              border-8
+              rounded-md
+              border-yellow-500
+              duration-150
+              hover:translate-y-6 hover:translate-x-6
+            "
           >
             <h3 class="text-center">Cassolet</h3>
             <div class="w-72">
@@ -148,7 +159,19 @@
         </div>
         <div class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48">
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96"
+            class="
+              align-middle
+              bg-black
+              text-white
+              font-parisienne
+              text-3xl
+              border-8
+              rounded-md
+              border-yellow-500
+              duration-150
+              hover:translate-y-6 hover:translate-x-6
+              max-h-96
+            "
           >
             <h3 class="text-center">Bœuf bourguignon</h3>
             <div class="w-72">
@@ -163,7 +186,18 @@
           </div>
 
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
+            class="
+              align-middle
+              bg-black
+              text-white
+              font-parisienne
+              text-3xl
+              border-8
+              rounded-md
+              border-yellow-500
+              duration-150
+              hover:translate-y-6 hover:translate-x-6
+            "
           >
             <h3 class="text-center">Chocolate soufflé</h3>
             <div class="w-72">
@@ -177,7 +211,18 @@
             </p>
           </div>
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
+            class="
+              align-middle
+              bg-black
+              text-white
+              font-parisienne
+              text-3xl
+              border-8
+              rounded-md
+              border-yellow-500
+              duration-150
+              hover:translate-y-6 hover:translate-x-6
+            "
           >
             <h3 class="text-center">Flamiche</h3>
             <div class="w-72">
@@ -191,10 +236,13 @@
             </p>
           </div>
         </div>
+      </div>
     </section>
     <span id="hotels"></span>
 
     <section class="section">
+      <br />
+      <br />
       <h2 class="font-parisienne text-center text-5xl">Hotels</h2>
     </section>
     <span id="transportation"></span>
@@ -213,9 +261,9 @@
           developed in France.
         </p>
       </div>
+      <br />
       <div>
-        <br />
-        <h4 class="font-parisienne text-4xl">1. Railroads</h4>
+        <h4 class="font-parisienne text-4xl ml-6">1. Railroads</h4>
 
         <p
           class="
@@ -232,7 +280,7 @@
             class="
               float-right
               max-w-7xl max-h-52
-              mr-3
+              mr-6
               -translate-y-10
               rounded-md
               hover:scale-110
@@ -252,7 +300,7 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl">2. Roads</h4>
+        <h4 class="font-parisienne text-4xl ml-6">2. Roads</h4>
         <p
           class="
             font-cormorant_garamond
@@ -264,7 +312,15 @@
         >
           <img
             src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
-            class="float-left max-w-7xl max-h-52 ml-3 rounded-md hover:scale-110 transition-all -translate-y-10"
+            class="
+              float-left
+              max-w-7xl max-h-52
+              ml-6
+              rounded-md
+              hover:scale-110
+              transition-all
+              -translate-y-10
+            "
           />
           France is believed to be the most car-dependent country, with roads
           spanning all over the country. There are over ~950,000 km (590,000 mi)
@@ -280,24 +336,57 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl">3. Waterways</h4>
+        <h4 class="font-parisienne text-4xl ml-6">3. Waterways</h4>
         <p
           class="
             font-cormorant_garamond
             text-2xl
             inline-block
+            align-top
             text-center
-            translate-y-10
+            translate-y-14
+            mr-6
           "
         >
-          The natural and man-made waterways of France are the largest in the
-          entire continent of Europe.
           <img
             src="https://www.cruisetradenews.com/resources/uploads/2019/06/croisi-europe-river-cruise.jpg"
             class="
               float-right
               max-w-7xl max-h-52
-              mr-3
+              -translate-y-20
+              rounded-md
+              hover:scale-110
+              transition-all
+              inline-block
+            "
+          />
+          The natural and man-made waterways of France are the largest in the
+          entire continent of Europe. They expand through 8,500 kilometers
+          (5,300 miles) of France and are mostly managed by the French
+          navigation authority. Such examples would include the Loire, Seine and
+          Rhône. Tourists are able to cruise through many of them and enjoy the
+          scenery.
+        </p>
+      </div>
+
+      <div>
+        <h4 class="font-parisienne text-4xl ml-6">4. Marine Transport</h4>
+        <p
+          class="
+            font-cormorant_garamond
+            text-2xl
+            inline-block
+            align-top
+            text-center
+            translate-y-10
+            ml-6
+          "
+        >
+          <img
+            src="https://images.squarespace-cdn.com/content/v1/5cb9ccd20b77bd235df53651/1558598516643-1AI147QS4JA1QIQTGJQO/image-asset.jpeg?format=1500w"
+            class="
+              float-left
+              max-w-7xl max-h-52
               -translate-y-10
               rounded-md
               hover:scale-110
